# moment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  moment.prj
cpp/: CMakeLists.txt  version.h
cpp/lib/: CMakeLists.txt  equality_type.cpp  equality_type.h  index_matrix_properties.cpp  index_matrix_properties.h  symbol.cpp  symbol.h  symbol_set.cpp  symbol_set.h  symbol_tree.cpp  symbol_tree.h  symbol_tree_simplify_impl.cpp  symbol_tree_simplify_impl.h
cpp/lib_moment/: CMakeLists.txt  hashed_sequence.cpp  hashed_sequence.h  integer_types.h  matrix_system.cpp  matrix_system.h  sequence_sign_type.cpp  sequence_sign_type.h  shortlex_hasher.h
cpp/lib_moment/dictionary/: dictionary.cpp  dictionary.h  dictionary_map.cpp  dictionary_map.h  hermitian_type.h  multi_operator_iterator.h  operator_sequence.cpp  operator_sequence.h  operator_sequence_generator.cpp  operator_sequence_generator.h  osg_pair.h  raw_polynomial.cpp  raw_polynomial.h
cpp/lib_moment/matrix/: composite_matrix.cpp  composite_matrix.h  localizing_matrix.cpp  localizing_matrix.h  localizing_matrix_index.cpp  localizing_matrix_index.h  localizing_matrix_properties.h  matrix.cpp  matrix.h  matrix_basis.cpp  matrix_basis.h  matrix_basis_type.h  matrix_properties.cpp  matrix_properties.h  matrix_type.h  moment_matrix.cpp  moment_matrix.h  moment_matrix_properties.h  monomial_matrix.cpp  monomial_matrix.h  monomial_matrix_arithmetic.cpp  monomial_matrix_basis.cpp  monomial_matrix_factory.cpp  monomial_matrix_factory.h  operator_matrix.cpp  operator_matrix.h  operator_sequence_generator.cpp  operator_sequence_generator.h  polynomial_localizing_matrix.cpp  polynomial_localizing_matrix.h  polynomial_matrix.cpp  polynomial_matrix.h  polynomial_matrix_arithmetic.cpp  polynomial_matrix_basis.cpp  substituted_matrix.cpp  substituted_matrix.h  substituted_matrix_properties.h  symbolic_matrix.cpp  symbolic_matrix.h  value_matrix.cpp  (+1 more)
cpp/lib_moment/matrix_system/: localizing_matrix_index.cpp  localizing_matrix_index.h  map_index_storage.h  matrix_factories.cpp  matrix_factories.h  matrix_indices.h  matrix_system.cpp  matrix_system.h  matrix_system_errors.h  matrix_system_factories.cpp  matrix_system_factories.h  matrix_system_indices.h  moment_matrix_index.cpp  moment_matrix_index.h  moment_matrix_index_storage.h  polynomial_index_storage.cpp  polynomial_index_storage.h  polynomial_localizing_matrix_index.cpp  polynomial_localizing_matrix_index.h  rulebook_storage.cpp  rulebook_storage.h  standard_matrix_indices.cpp  standard_matrix_indices.h  substituted_matrix_index.cpp  substituted_matrix_index.h  vector_index_storage.h
cpp/lib_moment/multithreading/: matrix_generation_worker.h  matrix_transformation_worker.h  multithreading.cpp  multithreading.h  queue.h
cpp/lib_moment/operators/: context.cpp  context.h  hashed_sequence.h  matrix_system.cpp  multi_operator_iterator.h  operator_sequence.cpp  operator_sequence.h  operator_sequence_generator.cpp  operator_sequence_generator.h  shortlex_hasher.cpp  shortlex_hasher.h
cpp/lib_moment/probability/: collins_gisin.cpp  collins_gisin.h  full_correlator.cpp  full_correlator.h  maintains_tensors.cpp  maintains_tensors.h  polynomial_tensor.cpp  polynomial_tensor.h  probability_tensor.cpp  probability_tensor.h  virtual_polynomial_view.cpp  virtual_polynomial_view.h
cpp/lib_moment/scenarios/: collins_gisin.cpp  collins_gisin.h  collins_gisin_iterator.cpp  collins_gisin_iterator.h  context.cpp  context.h  contextual_os.h  contextual_os_helper.h  dictionary_map.cpp  dictionary_map.h  explicit_symbols.cpp  explicit_symbols.h  implicit_outcome_iterator.cpp  implicit_outcome_iterator.h  implicit_symbols.cpp  implicit_symbols.h  joint_measurement_index.h  multi_operator_iterator.h  operator_sequence.cpp  operator_sequence.h  outcome_index_iterator.cpp  outcome_index_iterator.h  probability_tensor.cpp  probability_tensor.h  word_list.cpp  word_list.h
cpp/lib_moment/symbolic/: compare_by_op_hash.cpp  compare_by_op_hash.h  equality_type.cpp  equality_type.h  full_combo_ordering.h  linear_combo.h  moment_rule.cpp  moment_rule.h  moment_rulebook.cpp  moment_rulebook.h  moment_rulebook_to_basis.cpp  moment_rulebook_to_basis.h  moment_substitution_rule.cpp  moment_substitution_rule.h  moment_substitution_rulebook.cpp  moment_substitution_rulebook.h  monomial.cpp  monomial.h  monomial_comparator.h  monomial_comparator_by_hash.cpp  monomial_comparator_by_hash.h  order_symbols_by_hash.cpp  order_symbols_by_hash.h  polynomial.cpp  polynomial.h  polynomial_factory.cpp  polynomial_factory.h  polynomial_ordering.h  polynomial_to_basis.cpp  polynomial_to_basis.h  polynomial_to_basis_mask.cpp  polynomial_to_basis_mask.h  substitution_list.cpp  substitution_list.h  symbol.cpp  symbol.h  symbol_combo.cpp  (+18 more)
cpp/lib_npatk/: CMakeLists.txt  alphabetic_namer.cpp  equality_type.h  index_matrix_properties.cpp  integer_types.h  operator.cpp  operator.h  operator_collection.cpp  operator_collection.h  operator_sequence.cpp  operator_sequence.h  square_matrix.h  symbol_tree.cpp  symbol_tree_simplify_impl.h
cpp/mex_functions/: CMakeLists.txt  environmental_variables.cpp  environmental_variables.h  error_codes.h  errors.cpp  errors.h  function_list.cpp  function_list.h  impose_symmetric_constraints.cpp  mex_entry.cpp  mex_function.cpp  mex_function.h  mex_main.cpp  mex_main.h  mtk_function.cpp  mtk_function.h  storage_manager.cpp  storage_manager.h  wrapped_arg_range.h
cpp/stress_tests/: CMakeLists.txt  report_outcome.h  test_bff.cpp  test_bff.h  test_inflated_triangle.cpp  test_inflated_triangle.h  test_pauli_lattice.cpp  test_pauli_lattice.h  test_symmetrized_i4422.cpp  test_symmetrized_i4422.h
cpp/tests/: CMakeLists.txt  alphabetic_namer_tests.cpp  combination_iterator_tests.cpp  equality_type_tests.cpp  multi_dimensional_index_iterator_tests.cpp  operator_collection_tests.cpp  operator_sequence_tests.cpp  operator_tests.cpp  persistent_storage_tests.cpp  square_matrix_tests.cpp  symbol_node_and_link_tests.cpp  symbol_set_tests.cpp  symbol_tests.cpp  symbol_tree_tests.cpp  symbol_tree_tests.h
(+1540 files in other folders)
