include_directories(${Moment_SOURCE_DIR}/cpp/lib_moment)

add_library(lib_moment
        hashed_sequence.cpp
        matrix_system.cpp
        matrix/localizing_matrix.cpp
        matrix/matrix.cpp
        matrix/matrix_properties.cpp
        matrix/moment_matrix.cpp
        matrix/monomial_matrix.cpp
        matrix/operator_matrix.cpp
        matrix/operator_sequence_generator.cpp
        matrix/polynomial_matrix.cpp
        matrix/substituted_matrix.cpp
        scenarios/context.cpp
        scenarios/explicit_symbols.cpp
        scenarios/implicit_outcome_iterator.cpp
        scenarios/implicit_symbols.cpp
        scenarios/operator_sequence.cpp
        scenarios/outcome_index_iterator.cpp
        scenarios/word_list.cpp
        scenarios/algebraic/algebraic_context.cpp
        scenarios/algebraic/algebraic_precontext.cpp
        scenarios/algebraic/algebraic_matrix_system.cpp
        scenarios/algebraic/monomial_substitution_rule.cpp
        scenarios/algebraic/name_table.cpp
        scenarios/algebraic/ostream_rule_logger.cpp
        scenarios/algebraic/rule_book.cpp
        scenarios/imported/imported_context.cpp
        scenarios/imported/imported_matrix_system.cpp
        scenarios/inflation/canonical_observables.cpp
        scenarios/inflation/causal_network.cpp
        scenarios/inflation/extended_matrix.cpp
        scenarios/inflation/extension_suggester.cpp
        scenarios/inflation/factor_table.cpp
        scenarios/inflation/inflation_context.cpp
        scenarios/inflation/inflation_explicit_symbols.cpp
        scenarios/inflation/inflation_implicit_symbols.cpp
        scenarios/inflation/inflation_matrix_system.cpp
        scenarios/inflation/observable.cpp
        scenarios/inflation/observable_variant_index.cpp
        scenarios/inflation/source.cpp
        scenarios/locality/collins_gisin.cpp
        scenarios/locality/locality_context.cpp
        scenarios/locality/locality_explicit_symbols.cpp
        scenarios/locality/locality_implicit_symbols.cpp
        scenarios/locality/locality_matrix_system.cpp
        scenarios/locality/locality_operator_formatter.cpp
        scenarios/locality/joint_measurement_iterator.cpp
        scenarios/locality/party.cpp
        scenarios/symmetrized/group.cpp
        scenarios/symmetrized/remapper.cpp
        scenarios/symmetrized/representation.cpp
        scenarios/symmetrized/symmetrized_context.cpp
        scenarios/symmetrized/symmetrized_matrix_system.cpp
        symbolic/substitution_list.cpp
        symbolic/symbol.cpp
        symbolic/symbol_combo.cpp
        symbolic/symbol_expression.cpp
        symbolic/symbol_table.cpp
        utilities/alphabetic_namer.cpp
        utilities/kronecker_power.cpp
        utilities/persistent_storage.cpp
        utilities/shortlex_hasher.cpp
)