include_directories(${Moment_SOURCE_DIR}/cpp/lib_moment)

add_library(lib_moment
        hashed_sequence.cpp
        matrix_system.cpp
        matrix/localizing_matrix.cpp
        matrix/matrix.cpp
        matrix/matrix_basis.cpp
        matrix/matrix_properties.cpp
        matrix/moment_matrix.cpp
        matrix/monomial_matrix.cpp
        matrix/monomial_matrix_basis.cpp
        matrix/operator_matrix.cpp
        matrix/operator_sequence_generator.cpp
        matrix/polynomial_matrix.cpp
        matrix/polynomial_matrix_basis.cpp
        matrix/substituted_matrix.cpp
        scenarios/context.cpp
        scenarios/dictionary_map.cpp
        scenarios/explicit_symbols.cpp
        scenarios/implicit_outcome_iterator.cpp
        scenarios/implicit_symbols.cpp
        scenarios/operator_sequence.cpp
        scenarios/outcome_index_iterator.cpp
        scenarios/word_list.cpp
        scenarios/algebraic/algebraic_context.cpp
        scenarios/algebraic/algebraic_precontext.cpp
        scenarios/algebraic/algebraic_matrix_system.cpp
        scenarios/algebraic/monomial_substitution_rule.cpp
        scenarios/algebraic/name_table.cpp
        scenarios/algebraic/ostream_rule_logger.cpp
        scenarios/algebraic/rule_book.cpp
        scenarios/derived/derived_context.cpp
        scenarios/derived/derived_matrix_system.cpp
        scenarios/derived/lu_map_core_processor.cpp
        scenarios/derived/map_core.cpp
        scenarios/derived/symbol_table_map.cpp
        scenarios/imported/imported_context.cpp
        scenarios/imported/imported_matrix_system.cpp
        scenarios/inflation/canonical_observables.cpp
        scenarios/inflation/causal_network.cpp
        scenarios/inflation/extended_matrix.cpp
        scenarios/inflation/extension_suggester.cpp
        scenarios/inflation/factor_table.cpp
        scenarios/inflation/inflation_context.cpp
        scenarios/inflation/inflation_explicit_symbols.cpp
        scenarios/inflation/inflation_implicit_symbols.cpp
        scenarios/inflation/inflation_matrix_system.cpp
        scenarios/inflation/inflation_osg.cpp
        scenarios/inflation/observable.cpp
        scenarios/inflation/observable_variant_index.cpp
        scenarios/inflation/source.cpp
        scenarios/locality/collins_gisin.cpp
        scenarios/locality/locality_context.cpp
        scenarios/locality/locality_explicit_symbols.cpp
        scenarios/locality/locality_implicit_symbols.cpp
        scenarios/locality/locality_matrix_system.cpp
        scenarios/locality/locality_operator_formatter.cpp
        scenarios/locality/locality_osg.cpp
        scenarios/locality/joint_measurement_iterator.cpp
        scenarios/locality/party.cpp
        scenarios/symmetrized/group.cpp
        scenarios/symmetrized/representation.cpp
        scenarios/symmetrized/representation_mapper.cpp
        scenarios/symmetrized/symmetrized_matrix_system.cpp
        symbolic/moment_substitution_rule.cpp
        symbolic/moment_substitution_rulebook.cpp
        symbolic/order_symbols_by_hash.cpp
        symbolic/symbol.cpp
        symbolic/symbol_combo.cpp
        symbolic/symbol_combo_to_basis.cpp
        symbolic/symbol_expression.cpp
        symbolic/symbol_table.cpp
        symbolic/symbol_tools.cpp
        utilities/alphabetic_namer.cpp
        utilities/utf_conversion.cpp
        utilities/kronecker_power.cpp
        utilities/persistent_storage.cpp
        utilities/shortlex_hasher.cpp
)