include_directories(${Moment_SOURCE_DIR}/cpp/lib_moment)

add_library(lib_moment
        hashed_sequence.cpp
        sequence_sign_type.cpp
        dictionary/dictionary_map.cpp
        dictionary/operator_sequence.cpp
        dictionary/operator_sequence_generator.cpp
        dictionary/dictionary.cpp
        matrix/symbolic_matrix.cpp
        matrix/matrix_basis.cpp
        matrix/monomial_matrix.cpp
        matrix/monomial_matrix_basis.cpp
        matrix/polynomial_localizing_matrix.cpp
        matrix/polynomial_matrix.cpp
        matrix/polynomial_matrix_basis.cpp
        matrix/operator_matrix/is_hermitian.cpp
        matrix/operator_matrix/localizing_matrix.cpp
        matrix/operator_matrix/moment_matrix.cpp
        matrix/operator_matrix/operator_matrix.cpp
        matrix/substituted_matrix.cpp
        matrix_system/matrix_factories.cpp
        matrix_system/matrix_system.cpp
        matrix_system/polynomial_index_storage.cpp
        matrix_system/polynomial_localizing_matrix_index.cpp
        matrix_system/rulebook_storage.cpp
        multithreading/multithreading.cpp
        probability/collins_gisin.cpp
        probability/full_correlator.cpp
        probability/maintains_tensors.cpp
        probability/polynomial_tensor.cpp
        probability/probability_tensor.cpp
        probability/virtual_polynomial_view.cpp
        scenarios/context.cpp
        scenarios/algebraic/algebraic_context.cpp
        scenarios/algebraic/algebraic_precontext.cpp
        scenarios/algebraic/algebraic_matrix_system.cpp
        scenarios/algebraic/operator_rule.cpp
        scenarios/algebraic/name_table.cpp
        scenarios/algebraic/ostream_rule_logger.cpp
        scenarios/algebraic/operator_rulebook.cpp
        scenarios/derived/derived_context.cpp
        scenarios/derived/derived_matrix_system.cpp
        scenarios/derived/lu_map_core_processor.cpp
        scenarios/derived/map_core.cpp
        scenarios/derived/symbol_table_map.cpp
        scenarios/imported/imported_context.cpp
        scenarios/imported/imported_matrix_system.cpp
        scenarios/inflation/causal_network.cpp
        scenarios/inflation/extended_matrix.cpp
        scenarios/inflation/extended_matrix_indices.cpp
        scenarios/inflation/extension_suggester.cpp
        scenarios/inflation/factor_table.cpp
        scenarios/inflation/inflation_collins_gisin.cpp
        scenarios/inflation/inflation_context.cpp
        scenarios/inflation/inflation_full_correlator.cpp
        scenarios/inflation/inflation_matrix_system.cpp
        scenarios/inflation/inflation_osg.cpp
        scenarios/inflation/inflation_probability_tensor.cpp
        scenarios/inflation/observable.cpp
        scenarios/inflation/observable_variant_index.cpp
        scenarios/inflation/source.cpp
        scenarios/inflation/multithreading/extended_matrix_worker.cpp
        scenarios/inflation/multithreading/temporary_symbols_and_factors.cpp
        scenarios/locality/locality_collins_gisin.cpp
        scenarios/locality/locality_context.cpp
        scenarios/locality/locality_full_correlator.cpp
        scenarios/locality/locality_matrix_system.cpp
        scenarios/locality/locality_operator_formatter.cpp
        scenarios/locality/locality_probability_tensor.cpp
        scenarios/locality/locality_osg.cpp
        scenarios/locality/party.cpp
        scenarios/locality/party_measurement_index.cpp
        scenarios/symmetrized/group.cpp
        scenarios/symmetrized/group_rep_generation_worker.cpp
        scenarios/symmetrized/representation.cpp
        scenarios/symmetrized/representation_mapper.cpp
        scenarios/symmetrized/symmetrized_matrix_system.cpp
        scenarios/pauli/pauli_context.cpp
        scenarios/pauli/pauli_matrix_system.cpp
        scenarios/pauli/pauli_osg.cpp
        symbolic/monomial.cpp
        symbolic/monomial_comparator_by_hash.cpp
        symbolic/polynomial.cpp
        symbolic/polynomial_factory.cpp
        symbolic/polynomial_to_basis.cpp
        symbolic/polynomial_to_basis_mask.cpp
        symbolic/symbol.cpp
        symbolic/symbol_table.cpp
        symbolic/symbol_tools.cpp
        symbolic/rules/moment_rule.cpp
        symbolic/rules/moment_rulebook.cpp
        symbolic/rules/moment_rulebook_to_basis.cpp
        tensor/auto_storage_tensor.cpp
        tensor/index_flattener.cpp
        tensor/tensor_errors.cpp
        utilities/alphabetic_namer.cpp
        utilities/format_factor.cpp
        utilities/kronecker_power.cpp
        utilities/persistent_storage.cpp
        utilities/shortlex_hasher.cpp
        utilities/utf_conversion.cpp
)

if (UNIX)
    SET_TARGET_PROPERTIES(lib_moment PROPERTIES PREFIX "")
endif()
