include_directories(${NPAToolKit_SOURCE_DIR}/cpp/lib_npatk)

add_library(lib_npatk
        operators/collins_gisin.cpp
        operators/context.cpp
        operators/implicit_symbols.cpp
        operators/joint_measurement_index.cpp
        operators/joint_measurement_iterator.cpp
        operators/operator_sequence.cpp
        operators/operator_sequence_generator.cpp
        operators/party.cpp
        operators/matrix/localizing_matrix.cpp
        operators/matrix/matrix_system.cpp
        operators/matrix/moment_matrix.cpp
        operators/matrix/operator_matrix.cpp
        operators/matrix/symbol_matrix_properties.cpp
        operators/matrix/symbol_table.cpp
        symbolic/equality_type.cpp
        symbolic/symbol.cpp
        symbolic/symbol_expression.cpp
        symbolic/symbol_set.cpp
        symbolic/symbol_tree.cpp
        symbolic/symbol_tree_simplify_impl.cpp
        utilities/alphabetic_namer.cpp
        utilities/persistent_storage.cpp
    )