include_directories(${NPAToolKit_SOURCE_DIR}/cpp/lib_npatk)

add_library(lib_npatk
        operators/context.cpp
        operators/operator_sequence.cpp
        operators/operator_sequence_generator.cpp
        operators/locality/explicit_symbols.cpp
        operators/locality/collins_gisin.cpp
        operators/locality/implicit_symbols.cpp
        operators/locality/joint_measurement_index.cpp
        operators/locality/joint_measurement_iterator.cpp
        operators/locality/locality_context.cpp
        operators/locality/locality_matrix_system.cpp
        operators/locality/party.cpp
        operators/matrix/localizing_matrix.cpp
        operators/matrix/localizing_matrix_index.cpp
        operators/matrix/matrix_system.cpp
        operators/matrix/moment_matrix.cpp
        operators/matrix/operator_matrix.cpp
        operators/matrix/symbol_matrix_properties.cpp
        operators/matrix/symbol_table.cpp
        symbolic/equality_type.cpp
        symbolic/symbol.cpp
        symbolic/symbol_expression.cpp
        symbolic/symbol_set.cpp
        symbolic/symbol_tree.cpp
        symbolic/symbol_tree_simplify_impl.cpp
        utilities/alphabetic_namer.cpp
        utilities/persistent_storage.cpp
)