include_directories(${Moment_SOURCE_DIR}/cpp/lib_moment)

add_executable(moment_tests
    operators/context_tests.cpp
    operators/hashed_sequence_tests.cpp
    operators/localizing_matrix_tests.cpp
    operators/multi_operator_iterator_tests.cpp
    operators/moment_matrix_tests.cpp
    operators/operator_sequence_tests.cpp
    operators/operator_sequence_generator_tests.cpp
    operators/symbol_table_tests.cpp
    scenarios/implicit_symbol_test_helpers.cpp
    scenarios/algebraic/algebraic_context_tests.cpp
    scenarios/algebraic/monomial_substitution_rule_tests.cpp
    scenarios/algebraic/rule_book_tests.cpp
    scenarios/inflation/canonical_observables_tests.cpp
    scenarios/inflation/causal_network_tests.cpp
    scenarios/inflation/extended_matrix_tests.cpp
    scenarios/inflation/factor_table_tests.cpp
    scenarios/inflation/inflation_context_tests.cpp
    scenarios/inflation/inflation_explicit_symbols_tests.cpp
    scenarios/inflation/inflation_implicit_symbols_tests.cpp
    scenarios/locality/collins_gisin_tests.cpp
    scenarios/locality/joint_measurement_iterator_tests.cpp
    scenarios/locality/locality_context_tests.cpp
    scenarios/locality/locality_explicit_symbols_tests.cpp
    scenarios/locality/locality_implicit_symbols_tests.cpp
    scenarios/locality/party_tests.cpp
    symbolic/linear_combo_tests.cpp
    symbolic/substitution_list_tests.cpp
    symbolic/symbol_expression_tests.cpp
    symbolic/symbol_set_tests.cpp
    utilities/alphabetic_namer_tests.cpp
    utilities/combination_tests.cpp
    utilities/dynamic_bitset_tests.cpp
    utilities/index_tree_tests.cpp
    utilities/ipow_tests.cpp
    utilities/multi_dimensional_index_iterator_tests.cpp
    utilities/ordered_permutation_tests.cpp
    utilities/persistent_storage_tests.cpp
    utilities/recursive_storage_tests.cpp
    utilities/shortlex_hasher_tests.cpp
    utilities/small_vector_tests.cpp
    utilities/square_matrix_tests.cpp
    utilities/variable_chunk_range_tests.cpp)

target_link_libraries(moment_tests
    lib_moment
    gtest
    gtest_main
)